[package]
name = "bag-hodler"
version = "0.0.1"
authors = ["Alexander Limonov <alimonov@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "dev"}
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "dev"}

[[bin]]
name = "bag_hodler"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]