[package]
name = "cep47-tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "=1.4.1"
casper-types = "=1.4.1"
casper-hashing = "=1.4.1"
casper-engine-test-support = "=1.4.1"
test-env = { path = "../utils/test-env" }
contract-utils = { path = "../utils/contract-utils" }
hex = "0.4.3"
blake2 = "0.9.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
