[package]
name = "dragons-nft-tests"
version = "0.1.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "dev"}
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "dev"}
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node", branch = "dev"}
maplit = "1.0.2"
cep47-test = { path = "../cep47-test" }

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
