[package]
name = "dragons-nft"
version = "0.1.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "dev" }
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "dev" }
cep47 = { path="../cep47", features = ["no_owner_of"]}

[[bin]]
name = "dragons-nft"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]

