[package]
name = "dragons-nft"
version = "0.1.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.1"
casper-types = "1.3.1"
cep47 = { path="../cep47"}

[[bin]]
name = "dragons-nft"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]

