[package]
name = "marketplace"
version = "0.1.0"
authors = ["deusz <lovaszoltanr@gmail.com>"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.2.0" }
types = { package = "casper-types", version="1.2.0" }

[[bin]]
name = "marketplace"
path = "src/main.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "send_tokens"
path = "src/send_tokens.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
