[package]
name = "test-contracts"
version = "0.1.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.1"
casper-types = "1.3.1"
cep47 = { path="../cep47"}

[[bin]]
name = "dragons-nft"
path = "src/dragons-nft.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "owning-contract"
path = "src/owning_contract.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]

