[package]
name = "test-env"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.0"
casper-types = "1.3.0"
casper-engine-test-support = "1.3.0"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
