[package]
name = "test-env"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.3", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.0.3", features = ["test-support"] }
casper-execution-engine = "1.4.2"
casper-types = "1.4.4"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
